# lambda-docker-fastapi

./: .gitignore  README.md
cdk/: cdk.json  package-lock.json  package.json
python/: Dockerfile  pyproject.toml
python/app/: main.py
python/app/api/: order.py
